--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,23 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/conversao-temperatura:v${{ github.run_number }}
             ${{ secrets.DOCKERHUB_USERNAME }}/conversao-temperatura:latest
+            
+  CD:
+    runs-on: ubuntu-latest,
+    needs: [CI]
+    
+    steps: 
+      - uses: actions/checkout@v2
+      
+      - name: Kubernetes Set Context
+        uses: Azure/k8s-set-context@v2
+        with:
+          kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
+          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v1.5
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/conversao-temperatura:v${{ github.run_number }}
+          manifests: |
+            ./k8s/deployment.yaml
+            ./k8s/service.yaml
