--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,6 +7,7 @@ spec:
     app: first-exp
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
+      targetPort: 8080
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
